--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,5 +35,11 @@
 }
 
 .modal-dialog {
-    margin-top: 90px;
+    margin-top: 120px;
+    transform: translate(0, 0);
+}
+
+#chatbot-body.modal-body {
+    max-height: 380px;
+    overflow-y: auto;
 }
